# indycarpy

./: README.md  __init__.py  analysis.py  cleaning.py  helper.py  pyproject.toml  requirements.txt  scraper.py  setup.py
data/: race_track.csv
